@@ -1953,6 +1953,7 @@ extern void          _pcre_jit_compile(const real_pcre *, pcre_extra *);
 extern int           _pcre_jit_exec(const real_pcre *, void *, PCRE_SPTR,
                         int, int, int, int, int *, int);
 extern void          _pcre_jit_free(void *);
+extern int           _pcre_jit_get_size(void *);
 #endif
 
 /* Unicode character database (UCD) */
